toolchain/internal/core/analysis/testdata/errors/consts/enum_reference_without_member.vdl
// @expect: E205

enum Status {
  Active
}

const bad = Status
